# actions_fastapi

./: .gitignore  pyproject.toml  render.yaml  requirements.txt
app/: main.py
src/app/: backend_pre_start.py  main.py
src/app/api/: main.py  v1.py
src/app/api/routers/: auth.py  company.py  group.py  root.py  users.py
src/app/core/: config.py  security.py  utils.py
src/app/core/database/: create_db.py  db.py
src/app/models/: organization.py  regime.py  user.py
src/app/repositories/: auth.py  company.py  group.py  users.py
src/app/routers/: auth.py  root.py  users.py
src/app/schemas/: company.py  group.py  unidade.py  user.py
src/app/services/: company.py  group.py  users.py
src/app/websocket/: websocket.py  ws_manager.py
src/migrations/: env.py
src/migrations/versions/: 3c0390640b31_added_new_tables_for_grupo_empresa_.py  694d0a423321_change_colum_of_regime.py  6ec77bbc5625_add_new_tables_grupos_empresas_unidades_.py  82375077ef98_add_is_active_to_user.py  8e8a9e1f5f0a_change_relationship_between_unidades_.py  902b59877ccb_change_postgres_database_to_neon.py  c2d713179d7b_change_constrain_for_email_user_because_.py  cf002b9badf7_add_update_at_to_users_table.py  ea080d8893fb_create_users_table.py  ee2f0a12450c_change_table_users_add_role_column.py
